# shop-fastapi

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1b9d1bee7fa4_add_orders_models.py  211d8e506f6e_rename_create_and_update_date_to_create_.py  565f166e7328_add_img_to_item.py  6502db41acc5_add_orders_models.py  9acd0cc97a65_add_price_and_currency_for_item.py  c047e2e6163b_create_cpmany_and_item_tables.py  c5ec8dbef0ce_add_user_permissions_and_role.py  fac251ade456_add_messages_models.py
app/: app_factory.py  main.py
app/auth/: __init__.py  auth_handler.py  password_handler.py
app/config/: __init__.py  config.py  logger.py
app/db/: database.py
app/db/models/: __init__.py  base.py  company.py  enums.py  item.py  message.py  order.py  order_item.py  user.py
app/dependencies/: __init__.py  auth.py  filters.py  pagination.py  sorting.py  validation.py
app/exception/: __init__.py  custom_error.py  register_exception_handler.py
app/mappers/: __init__.py  base_mapper.py  company_mapper.py  item_mapper.py  message_mapper.py  order_mapper.py  paginated_mapper.py  user_mapper.py
app/repo/: __init__.py  base_repository.py  company_repository.py  item_repository.py  message_repo.py  order_repository.py  user_repository.py
app/routers/: __init__.py  auth_router.py  company_router.py  item_router.py  order_router.py  payment_router.py  user_router.py  ws_router.py
app/schemas/: __init__.py  base.py  company.py  item.py  message.py  order.py  payment.py  user.py
app/services/: __init__.py  company_service.py  compay_service.py  item_service.py  order_service.py  payment_service.py  redis_service.py  sentry_service.py  user_service.py  web_socket_service.py
app/services/abstract/: __init__.py  abstract_company_service.py  abstract_item_service.py  abstract_order_service.py  abstract_payment_service.py  abstract_user_service.py  abstract_ws_service.py
app/services/impl/: __init__.py  company_service_impl.py  item_service_impl.py  order_service_impl.py  payment_service_impl.py  user_service_impl.py  ws_service_impl.py
app/storage/: __init__.py  s3.py
app/websockets/: __init__.py  connection_manager.py
documentation/: mkdocs.yml
documentation/docs/: index.md  logging.md
nginx/: nginx.conf
