[tool.poetry]
package-mode = false

[project]
name = "shop"
version = "0.1.0"
description = ""
authors = [
    { name = "KateySt", email = "kateystetsenko@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = "^alembic/"

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "alembic.versions.*",
    "alembic.env",
]
ignore_errors = true
